--- a/style.css
+++ b/style.css
@@ -1,4 +1,25 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+  background-color: black;
+  font: arial;
+  color: white;
+}
 
+h1 {
+  color: grey;
+  font: verdana;
+}
 
+.maindiv {
+  background-color: white;
+  color: black;
+  width: 300px;
+  padding: 20px;
+  border-radius: 25px;
+  margin: auto;
+}
+
+.footer {
+  width: 300px;
+  margin: auto;
+  text-align: center;
+}
