--- a/style.css
+++ b/style.css
@@ -5,21 +5,22 @@ body {
 }
 
 h1 {
-  color: grey;
+  color: rgb(90, 90, 90);
   font: verdana;
 }
 
 .maindiv {
   background-color: white;
   color: black;
-  width: 300px;
+  width: 375px;
   padding: 20px;
   border-radius: 25px;
   margin: auto;
+  line-height: 22px;
 }
 
 .footer {
-  width: 300px;
+  width: 375px;
   margin: auto;
   text-align: center;
 }
