--- a/style.css
+++ b/style.css
@@ -1,4 +1,33 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+  background-image: url("assets/helicopter-money-1024x512.jpeg");
+  background-color: black;
+  background-repeat: no-repeat;
+  background-position: center;
+  font: arial;
+  color: white;
+}
 
+h1 {
+  color: rgb(90, 90, 90);
+  font: verdana;
+}
 
+.maindiv {
+  background-color: white;
+  color: black;
+  width: 27.5em;
+  padding: 20px;
+  border-radius: 25px;
+  margin: auto;
+  line-height: 22px;
+}
+
+.footer {
+  width: 20em;
+  margin: auto;
+  background-color: white;
+  font-size: 1.25em;
+  font-weight: bold;
+  text-align: center;
+  color: black;
+}
